WFCORE-1374 Update build to work on jdk9 b148 or later